syntax = "proto3";

option java_package = "cc.before30.home.grpc.proto";

// The greeter service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc Search (SearchRequest) returns (SearchResponse) {}

}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message SearchRequest {
    string query = 1;
}

message SearchResponse {
    string query = 1;
    int64 total_count = 2;
}